--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: android
 jdk: oraclejdk8
 
+before_script: 
+        - mkdir "$ANDROID_SDK/licenses" || true 
+        - echo 8933bad161af4178b1185d1a37fbf41ea5269c55 > $ANDROID_SDK/licenses/android-sdk-license
+        - echo 79120722343a6f314e0719f863036c702b0e6b2a > $ANDROID_SDK/licenses/android-sdk-preview-license
+        - echo d975f751698a77b662f1254ddbeed3901e976f5a > $ANDROID_SDK/licenses/intel-android-extra-license
 script: ./gradlew
 
